Verify hostingGoals in table with mixed goals.
Modified test to add more splits so both NEVER and ALWAYS could be
tested for completeness.

The steps have been updated as follows:

- create table
- add two splits; leave first tablet to default ONDEMAND. Set second to
  NEVER and third to ALWAYS
- add an additional split point within each of the existing three
  tablets
- verify newly created tablets are set with the hostingGoal of the
  tablet from which they were split